syntax = "proto3";

package grpc_service;

option go_package = "./";

message Project {
  uint64 ID      = 1;
  uint64 OwnerID = 2;

  string Name        = 3;
  string Description = 4;
  string Version     = 5;
}
message User {
  uint64 ID        = 1;
  uint64 ProjectID = 2;

  string Email    = 3;
  string Username = 4;

  repeated Role Accesses = 6;
}

message Role {
  uint64 ID        = 1;
  uint64 ProjectID = 2;

  string Name     = 3;
  bool   IsSystem = 4;

  repeated Role Inheritances = 5;
}