syntax = "proto3";

package grpc_service;

option go_package = "./";

message AccessSystemCheckUserAccessRequest {
  uint64 UserID = 1;

  repeated uint64 RolesID = 2;
  repeated uint64 PermissionsID = 3;
}

message AccessSystemCheckUserAccessResponse {
  bool Allowed = 1;
}

service AccessSystemService {
  rpc CheckUserAccess(AccessSystemCheckUserAccessRequest) returns (AccessSystemCheckUserAccessResponse);
}